Update for DaySecond

--- a/Test_21_40.ipynb
+++ b/Test_21_40.ipynb
@@ -235,6 +235,241 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input the number to find factorial: \n",
+      "The factorial of number 4 is 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "def factorial(n):\n",
+    "    if(n==1 or n==0):\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n*factorial(n-1)\n",
+    "\n",
+    "a = int(input(print(\"Input the number to find factorial: \")))\n",
+    "fact=factorial(a)\n",
+    "print(f\"The factorial of number {a} is {fact}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibonacci(n):\n",
+    "    if n<=1:\n",
+    "        return n\n",
+    "    else:\n",
+    "        return fibonacci(n-1) + fibonacci(n-2)\n",
+    "\n",
+    "\n",
+    "a = int(input(\"Input the range of number to find fibonacci series: \"))\n",
+    "for i in range(a):\n",
+    "    print(fibonacci(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'set'>\n",
+      "<class 'dict'>\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "Ball\n",
+      "Cat\n"
+     ]
+    }
+   ],
+   "source": [
+    "set1 = {\"Cat\",1,2,\"Ball\",3,4,4,4,\"Ball\"} #Set in unordered and merges duplicate elements\n",
+    "print(type(set1))\n",
+    "set2 = {}\n",
+    "print(type(set2))\n",
+    "# set3 = set()\n",
+    "# print(type(set3)) #Jupyter throws error but set3 will show class set in Python\n",
+    "for i in set1:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Pokhara', 'Dang', 'Lalitpur', 'Bhaktapur', 'Kathmandu'}\n",
+      "{'Bhaktapur', 'Kathmandu'}\n",
+      "{'Dang', 'Lalitpur', 'Pokhara'}\n",
+      "{'Lalitpur'}\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "set_city1 = {\"Kathmandu\", \"Bhaktapur\", \"Lalitpur\"}\n",
+    "set_city2 = {\"Kathmandu\", \"Bhaktapur\", \"Dang\", \"Pokhara\"}\n",
+    "set_city3 = {\"Kathmandu\", \"Bhaktapur\"}\n",
+    "print(set_city1.union(set_city2))\n",
+    "print(set_city1.intersection(set_city2))\n",
+    "print(set_city1.symmetric_difference(set_city2))\n",
+    "print(set_city1.difference(set_city2))\n",
+    "print(set_city1.isdisjoint(set_city2))\n",
+    "print(set_city1.issuperset(set_city2))\n",
+    "print(set_city1.issuperset(set_city3))\n",
+    "print(set_city1.issubset(set_city3))\n",
+    "print(set_city3.issubset(set_city1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Green', 'Blue', 'Red'}\n",
+      "{'Yellow', 'Green', 'Blue', 'Red'}\n",
+      "{'Liquid', 'Green', 'Yellow', 'Red', 'Solid', 'Gas', 'Blue'}\n",
+      "{'Liquid', 'Green', 'Red', 'Solid', 'Gas', 'Blue'}\n",
+      "{'Liquid', 'Green', 'Red', 'Solid', 'Gas', 'Blue'}\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'China'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[104], line 12\u001b[0m\n\u001b[0;32m     10\u001b[0m set_colors\u001b[38;5;241m.\u001b[39mdiscard(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mChina\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;66;03m#Ignores if the element is not found where remove throws and error\u001b[39;00m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(set_colors)\n\u001b[1;32m---> 12\u001b[0m \u001b[43mset_colors\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mremove\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mChina\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m#Remove throws and error\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(set_colors)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'China'"
+     ]
+    }
+   ],
+   "source": [
+    "set_colors = {\"Red\", \"Green\", \"Blue\"}\n",
+    "set_states = {\"Solid\",\"Liquid\",\"Gas\"}\n",
+    "print(set_colors)\n",
+    "set_colors.add(\"Yellow\")\n",
+    "print(set_colors)\n",
+    "set_colors.update(set_states)\n",
+    "print(set_colors)\n",
+    "set_colors.remove(\"Yellow\")\n",
+    "print(set_colors)\n",
+    "set_colors.discard(\"China\") #Ignores if the element is not found where remove throws and error\n",
+    "print(set_colors)\n",
+    "set_colors.remove(\"China\") #Remove throws and error\n",
+    "print(set_colors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Gas', 'Blue'}\n",
+      "Solid\n",
+      "set()\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'set_colors' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[108], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(set_colors)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m set_colors\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mset_colors\u001b[49m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'set_colors' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "set_pop = set_colors.pop()\n",
+    "print(set_colors)\n",
+    "print(set_pop)\n",
+    "set_colors.clear() #Clears the elements of the sets\n",
+    "print(set_colors)\n",
+    "del set_colors\n",
+    "print(set_colors) #Error because the set no longer exists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "Arpan\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'Hobby'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[111], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(info\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHobby\u001b[39m\u001b[38;5;124m\"\u001b[39m)) \u001b[38;5;66;03m#Get doesn't throw error while the other does\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(info[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mName\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43minfo\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mHobby\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m) \u001b[38;5;66;03m#Get doesn't throw error while the other does\u001b[39;00m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'Hobby'"
+     ]
+    }
+   ],
+   "source": [
+    "info = {\"Name\":\"Arpan\",\"Age\":22,\"Address\":\"HighVision Colony\"}\n",
+    "print(info.get(\"Hobby\")) #Get doesn't throw error while the other does\n",
+    "print(info[\"Name\"])\n",
+    "print(info[\"Hobby\"]) #Get doesn't throw error while the other does"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
