--- a/Test_21_40.ipynb
+++ b/Test_21_40.ipynb
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -456,16 +456,113 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[111], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(info\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHobby\u001b[39m\u001b[38;5;124m\"\u001b[39m)) \u001b[38;5;66;03m#Get doesn't throw error while the other does\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(info[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mName\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43minfo\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mHobby\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m) \u001b[38;5;66;03m#Get doesn't throw error while the other does\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[122], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(info\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHobby\u001b[39m\u001b[38;5;124m\"\u001b[39m)) \u001b[38;5;66;03m#get() doesn't throw error while the other does\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(info[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mName\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43minfo\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mHobby\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m) \u001b[38;5;66;03m#Throw error while get() doesn't\u001b[39;00m\n",
       "\u001b[1;31mKeyError\u001b[0m: 'Hobby'"
      ]
     }
    ],
    "source": [
     "info = {\"Name\":\"Arpan\",\"Age\":22,\"Address\":\"HighVision Colony\"}\n",
-    "print(info.get(\"Hobby\")) #Get doesn't throw error while the other does\n",
+    "print(info.get(\"Hobby\")) #get() doesn't throw error while the other does\n",
     "print(info[\"Name\"])\n",
-    "print(info[\"Hobby\"]) #Get doesn't throw error while the other does"
+    "print(info[\"Hobby\"]) #Throw error while get() doesn't"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['Name', 'Age', 'Address'])\n",
+      "Arpan\n",
+      "22\n",
+      "HighVision Colony\n",
+      "dict_values(['Arpan', 22, 'HighVision Colony'])\n",
+      "Name\n",
+      "Age\n",
+      "Address\n",
+      "dict_items([('Name', 'Arpan'), ('Age', 22), ('Address', 'HighVision Colony')])\n",
+      "Name Arpan\n",
+      "Age 22\n",
+      "Address HighVision Colony\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(info.keys())\n",
+    "\n",
+    "for i in info:\n",
+    "    print(info[i])\n",
+    "print(info.values())\n",
+    "\n",
+    "for i in info:\n",
+    "    print(i)\n",
+    "print(info.items())\n",
+    "\n",
+    "for key, value in info.items():\n",
+    "    print(key,value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Address', 'HighVision Colony')\n",
+      "{'Name': 'Arpan', 'Age': 22, 'Hobby': 'Gaming'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict_pop = info.popitem()\n",
+    "print(dict_pop)\n",
+    "info.update({\"Hobby\":\"Gaming\"})\n",
+    "print(info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "Operation is over\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print(i)\n",
+    "else:\n",
+    "    print(\"Operation is over\")\n",
+    "\n",
+    "for i in range(5):\n",
+    "    print(i)\n",
+    "    if(i==4):\n",
+    "        break\n",
+    "else:\n",
+    "    print(\"Operation is over\")"
    ]
   },
   {
@@ -473,7 +570,70 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a =  input(\"Enter any number: \")\n",
+    "print(f\"The Multiplication Table of {a} is: \")\n",
+    "try:\n",
+    "    for i in range(1,11):\n",
+    "        print(f\"{a} X {i} = {int(a)*i}\")\n",
+    "except ValueError:\n",
+    "    print(\"Sorry an error occured\")\n",
+    "finally:\n",
+    "    print(\"The operation is completed\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'CustomError' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m num1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter a number between 1 to 10: \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m(num1\u001b[38;5;241m<\u001b[39m\u001b[38;5;241m1\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m num1\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m10\u001b[39m):\n\u001b[1;32m----> 3\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[43mCustomError\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe value must be between 1 to 10\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(num1)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'CustomError' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = int(input(\"Enter a number between 1 to 10: \"))\n",
+    "if(num1<1 or num1>10):\n",
+    "    raise ValueError(\"The value must be between 1 to 10\")\n",
+    "print(num1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hehellohehe\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "message = input(\"Enter a message to encrypt: \")\n",
+    "if(len(message)>3):\n",
+    "    pop = message[0:1]\n",
+    "    message=message[1:]\n",
+    "    message=message+pop\n",
+    "    pre = input(\"Enter a random 3 letter text to encrypt: \")\n",
+    "    post = input(\"Enter a random 3 letter text to encrypt: \")\n",
+    "    pre=pre+message+post\n",
+    "    print(pre)\n",
+    "else:\n",
+    "    code = message[::-1]\n",
+    "    print(code)\n"
+   ]
   }
  ],
  "metadata": {
