--- a/Test_61_80.ipynb
+++ b/Test_61_80.ipynb
@@ -278,6 +278,109 @@
     "print(harry.id)\n",
     "print(harry.lang)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Employee:\n",
+    "\n",
+    "  def __init__(self, name): \n",
+    "    self.name = name\n",
+    "\n",
+    "  def __len__(self): #Magic/Dunder Methods\n",
+    "    i = 0\n",
+    "    for c in self.name:\n",
+    "      i = i + 1\n",
+    "    return i\n",
+    "\n",
+    "  def __str__(self): #Magic/Dunder Methods\n",
+    "    return f\"The name of the employee is {self.name} str\"\n",
+    "    \n",
+    "  def __repr__(self): #Magic/Dunder Methods\n",
+    "    return f\"Employee('{self.name}')\"\n",
+    "\n",
+    "  def __call__(self): #Magic/Dunder Methods\n",
+    "    print(\"Hey I am good\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "78.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Shape:\n",
+    "  def __init__(self, x, y):\n",
+    "    self.x = x\n",
+    "    self.y = y\n",
+    "    \n",
+    "  def area(self):\n",
+    "      return self.x * self.y\n",
+    "\n",
+    "class Circle(Shape):\n",
+    "    def __init__(self, radius):\n",
+    "      self.radius = radius\n",
+    "      super().__init__(radius, radius)\n",
+    "\n",
+    "    def area(self):\n",
+    "        return 3.14 *  super().area()\n",
+    "      \n",
+    "rec = Shape(3, 5)\n",
+    "print(rec.area())\n",
+    "\n",
+    "c = Circle(5)\n",
+    "print(c.area())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3i + 5j + 6k\n",
+      "1i + 2j + 9k\n",
+      "4i + 7j + 15k\n",
+      "<class '__main__.Vector'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vector:\n",
+    "  def __init__(self, i, j, k):\n",
+    "    self.i = i\n",
+    "    self.j = j\n",
+    "    self.k = k\n",
+    "\n",
+    "  def __str__(self):\n",
+    "    return f\"{self.i}i + {self.j}j + {self.k}k\"\n",
+    "\n",
+    "  def __add__(self, x):\n",
+    "    return Vector(self.i + x.i,  self.j+x.j, self.k+x.k) \n",
+    "v1 = Vector(3, 5, 6)\n",
+    "print(v1)\n",
+    "\n",
+    "v2 = Vector(1, 2, 9)\n",
+    "print(v2)\n",
+    "\n",
+    "print(v1 + v2)\n",
+    "print(type(v1 + v2))"
+   ]
   }
  ],
  "metadata": {
